<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/question_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/decimal"
        android:text="@string/question_6"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:id="@+id/radio_group_q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_q6_choice_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acanthus"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_q6_choice_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abacus"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_q6_choice_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abracadabra"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_q6_choice_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accordion"
            android:textColor="@android:color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/feedback_q6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_small"
        android:contentDescription="@string/decimal"
        android:textColor="@color/colorPrimary"
        android:visibility="gone" />

</LinearLayout>